--- a/index.html
+++ b/index.html
@@ -1,39 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>ALPHA</title>
 </head>
+
 <body>
     <header>
-        <div class="logo"> <!--Logo-->
-            <a href="./index.html"><img src="./img/alpha.png" alt="Logo"></a>
-        </div>
-        <nav> <!--Menu-->
-            <ul>
-                <li class="boton"><a href="./index.html">Inicio</a></li>
-                <li class="boton"><a href="./pages/productos.html">Productos</a></li>
-                <li class="boton"><a href="./pages/servicios.html">Servicios</a></li>
-                <li class="boton"><a href="./pages/contacto.html">Contactos</a></li>
-                <li class="boton"><a href="./pages/acercade.html">Nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <!--MENU-->
+            <div class="container-fluid">
+                <a class="navbar-brand logo" href="./index.html"><img src="./img/alpha.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 opc">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/servicios.html">SERVICIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/contacto.html">CONTACTO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/acercade.html">NOSOTROS</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Escribe aqui..."
+                            aria-label="Search">
+                        <button class="buscar" type="submit">BUSCAR</button>
+                    </form>
+                </div>
+            </div>
         </nav>
     </header>
-    <main> 
-        <section class="hero"> <!--Seccion Titulo y Subtitulo-->
+    <main>
+        <section class="hero">
+            <!--Seccion Titulo y Subtitulo-->
             <h1 class="titulo">ALPHA MUSIC</h1>
-            <h2 id="subtitulo">Tienda de audio y sonido de alta calidad</h2>
-        </section> 
-        <section class="loMasVendido"> <!--Seccion lo mas vendido-->
+        </section>
+        <section class="banner"> <!--seccion banner-->
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/banner2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/banner3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/bateria1Copy.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <section class="banner2">
+            <div>
+                <img src="./img/banner2.jpg" alt="">
+            </div>
+        </section>
+        <section class="loMasVendido">
+            <!--Seccion lo mas vendido-->
             <h2> LO MAS VENDIDO</h2>
             <div>
                 <div>
                     <img src="./img/audifonos2.jpg" alt="Producto">
                     <h3>Auriculares</h3>
-                    <a  href="">COMPRAR</a>
+                    <a href="">COMPRAR</a>
                 </div>
                 <div>
                     <img src="./img/microfono1.jpg" alt="Producto">
@@ -49,11 +121,12 @@
                     <img src="./img/Soporte.jpg" alt="Producto">
                     <h3>Soporte</h3>
                     <a href="">COMPRAR</a>
-                </div> 
+                </div>
             </div>
             <a class="verMas" href="./pages/productos.html">VER MAS >></a>
         </section>
-        <section class="ofertas"> <!--Seccion de ofertas-->
+        <section class="ofertas">
+            <!--Seccion de ofertas-->
             <h2>OFERTAS</h2>
             <div>
                 <div>
@@ -74,7 +147,8 @@
             </div>
             <a class="verMas" href="./pages/productos.html">VER MAS >></a>
         </section>
-        <section class="categorias"> <!--Seccion de categorias-->
+        <section class="categorias">
+            <!--Seccion de categorias-->
             <h2>CATEGORIAS</h2>
             <div>
                 <div>
@@ -107,11 +181,13 @@
         </section>
     </main>
     <footer>
-        <div class="logo"> <!--Logo-->
+        <div class="logo">
+            <!--Logo-->
             <a href="./index.html"><img src="./img/alpha.png" alt=""></a>
         </div>
         <div>
-            <ul> <!--Enlaces footer-->
+            <ul>
+                <!--Enlaces footer-->
                 <li>
                     <p>Lorem ipsum dolor sit.</p>
                 </li>
@@ -126,7 +202,8 @@
                 </li>
             </ul>
         </div>
-        <div class="redes"> <!--Redes solciales-->
+        <div class="redes">
+            <!--Redes solciales-->
             <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Facebook"></a>
             <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Instagram"></a>
             <a href="https://twitter.com/" target="_blank"><img src="./img/twitter.png" alt="Twitter"></a>
@@ -136,5 +213,9 @@
             <a href=""><img src="./img/soporte.png" alt="whatsapp"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
