--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -4,27 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>ALPHA</title>
 </head>
 <body>
     <header>
-        <div class="logo"> <!--Logo-->
-            <a href="../index.html"><img src="../img/alpha.png" alt="logo"></a>
-        </div>
-        <nav> <!--menu-->
-            <ul>
-                <li class="boton"><a href="../index.html">Inicio</a></li>
-                <li class="boton"><a href="./productos.html">Productos</a></li>
-                <li class="boton"><a href="./servicios.html">Servicios</a></li>
-                <li class="boton"><a href="./contacto.html">Contactos</a></li>
-                <li class="boton"><a href="./acercade.html">Nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light"> <!--MENU-->
+            <div class="container-fluid">
+                <a class="navbar-brand logo" href="../index.html"><img src="../img/alpha.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 opc">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./servicios.html">SERVICIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./acercade.html">NOSOTROS</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Escribe aqui..." aria-label="Search">
+                        <button class="buscar" type="submit">BUSCAR</button>
+                    </form>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section class="hero2"> <!--Titulo-->
-            <h1 class="titulo">NOSOTROS</h1>
+            <h1 class="titulo2">NOSOTROS</h1>
         </section>
         <div class="gridContainer">
             
@@ -43,7 +65,7 @@
             </section>
 
             <section class="party2">
-                <img src="../img/party2.jpg" alt="imagen">
+                <img src="../img/party2Copy.jpg" alt="imagen">
             </section>
 
             <section class="party3">
@@ -82,5 +104,6 @@
             <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/whatsapp.png" alt="Whatsapp"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
