Agregando SCSS & SEO al proyecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="./CSS/backup.css">-->
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>ALPHA</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
+    <!--TITLE-->
+    <title>ALPHA MUSIC | Tienda online de audio y sonido de alta calidad </title>
+
+    <!--DESCRIPTION-->
+    <meta name="description" content="Tienda online donde podras encontrar la mejor calidad, seguridad y fiabilidad en instrumentos musicales y dispositivos de audio y sonido">
+
+    <!--KEYWORDS-->
+    <meta name="keywords" content="audio, sonido, musica, instrumentos musicales, parlante, auriculares, microfono, dj">
+    
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="e-comerce">
+    <meta property="og:titel" content="ALPHA MUSIC | Tienda online de audio y sonido de alta calidad">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Tienda online donde podras encontrar la mejor calidad, seguridad y fiabilidad en instrumentos musicales y dispositivos de audio y sonido">
+
 </head>
 
 <body>
@@ -17,7 +34,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <!--MENU-->
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="./index.html"><img src="./img/alpha.png" alt="logo"></a>
+                <a class="navbar-brand logo" href="./index.html"><img src="./img/alpha.png" alt="logo alpha"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -67,17 +84,17 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/banner2.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/banner2.jpg" class="d-block w-100" alt="Imagen banner">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/banner3.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/banner3.jpg" class="d-block w-100" alt="Imagen banner">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/bateria1Copy.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/bateria1Copy.jpg" class="d-block w-100" alt="Imagen banner">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
@@ -96,7 +113,7 @@
         </section>
         <section class="banner2">
             <div>
-                <img src="./img/banner2.jpg" alt="">
+                <img src="./img/banner2.jpg" alt="Imagen banner">
             </div>
         </section>
         <section class="loMasVendido">
@@ -153,29 +170,29 @@
             <h2>CATEGORIAS</h2>
             <div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/altavozCategoria.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/altavozCategoria.png" alt="Categoria altavoz"></a>
                     <h3>PARLANTES</h3>
                 </div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/auricularesCategoria.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/auricularesCategoria.png" alt="Categoria auriculares"></a>
                     <h3>AURICULARES</h3>
                 </div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/microfonoCategoria.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/microfonoCategoria.png" alt="Categoria microfonos"></a>
                     <h3>MICROFONOS</h3>
                 </div>
             </div>
             <div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/instrumentoCategoria.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/instrumentoCategoria.png" alt="Categoria instrumentos"></a>
                     <h3>INSTRUMENTOS</h3>
                 </div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/djCategoria.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/djCategoria.png" alt="Categoria djs"></a>
                     <h3>DJ's</h3>
                 </div>
                 <div>
-                    <a href="./pages/productos.html"><img src="./img/mas.png" alt="Categoria"></a>
+                    <a href="./pages/productos.html"><img src="./img/mas.png" alt="Categoria otros"></a>
                     <h3>ACCESORIOS</h3>
                 </div>
             </div>
@@ -184,7 +201,7 @@
     <footer>
         <div class="logo">
             <!--Logo-->
-            <a href="./index.html"><img src="./img/alpha.png" alt=""></a>
+            <a href="./index.html"><img src="./img/alpha.png" alt="Logo alpha"></a>
         </div>
         <div>
             <ul>
