--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -7,13 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="./CSS/backup.css">-->
     <link rel="stylesheet" href="../CSS/style.css">
-    <title>ALPHA</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>ALPHA MUSIC | Tienda online de audio y sonido de alta calidad</title>
+    <meta name="description" content="Tienda online donde podras encontrar la mejor calidad, seguridad y fiabilidad en instrumentos musicales y dispositivos de audio y sonido ">
+    <meta name="keywords" content="audio, sonido, musica, instrumentos musicales, parlante, auriculares, microfono, dj">
+    <meta property="og:type" content="e-comerce">
+    <meta property="og:titel" content="ALPHA MUSIC | Tienda online de audio y sonido de alta calidad">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Tienda online donde podras encontrar la mejor calidad, seguridad y fiabilidad en instrumentos musicales y dispositivos de audio y sonido">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light"> <!--MENU-->
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="../index.html"><img src="../img/alpha.png" alt="logo"></a>
+                <a class="navbar-brand logo" href="../index.html"><img src="../img/alpha.png" alt="logo alpha"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -62,25 +70,25 @@
             </section>
 
             <section class="party1">
-                <img src="../img/party1.jpg" alt="img">
+                <img src="../img/party1.jpg" alt="imgen fiesta">
             </section>
 
             <section class="party2">
-                <img src="../img/party2Copy.jpg" alt="imagen">
+                <img src="../img/party2Copy.jpg" alt="imagen fiesta">
             </section>
 
             <section class="party3">
-                <img src="../img/party3.jpg" alt="imagen">
+                <img src="../img/party3.jpg" alt="imagen fiesta">
             </section>
 
             <section class="party4">
-                <img src="../img/party4.jpg" alt="imagen">
+                <img src="../img/party4.jpg" alt="imagen fiesta">
             </section>
         </div>
     </main>
     <footer>
         <div class="logo"> <!--Logo-->
-            <a href="../index.html"><img src="../img/alpha.png" alt="logo"></a>
+            <a href="../index.html"><img src="../img/alpha.png" alt="logo alpha"></a>
         </div>
         <div> <!--Enlaces footer-->
             <ul> 
