--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -66,7 +66,30 @@
             </section>
 
             <section class="textNosotros"> <!--Texto sobre la tienda-->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nisi nulla provident. Voluptas eligendi repudiandae necessitatibus cum. Earum iusto dicta doloremque voluptate reprehenderit velit corporis rem, neque consectetur dignissimos aut aliquid omnis non atque delectus dolores, nulla iure error? Eum voluptatum architecto necessitatibus excepturi laboriosam tenetur, cumque, in vero sint omnis reprehenderit asperiores error et dolorem distinctio ipsa tempore odio iusto veritatis laudantium sequi dignissimos molestias voluptas. Omnis impedit aut magnam fuga itaque, praesentium consequatur blanditiis quasi, optio quae exercitationem ipsum dicta. Totam, minima autem aperiam dolorum libero quidem eum distinctio numquam ab alias esse. Aperiam eos debitis doloremque molestias? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere veritatis aliquam quisquam voluptatem, maiores dolore, tempora fugiat eveniet voluptate, nihil eos dignissimos ipsum nisi temporibus ipsa odit vel dicta delectus?</p>
+                <p>¿Quienes somos?
+
+                    Alpha Music Tienda online donde podras encontrar la mejor calidad, seguridad y fiabilidad en instrumentos musicales y dispositivos de audio y sonido.
+                </p>
+                <p>
+                    ¿Qué ofrecemos?
+
+                    Instrumentos musicales, dispositivos de sonido, dispositivos de audio, dispositivos para dj's y de mas accesorios.
+                </p>
+                <p>
+                    ¿Qué nos hace diferentes?
+
+                    Te daremos la mejor calidad, seguridad y especialidad en cada una de tus compras.
+                </p>
+                <p>
+                    ¿Por qué confiar en nosotros?
+
+                    Te respaldaremos en todo momento con cualquiera de nuestros productos.
+                </p>
+                <p>
+                    ¿Qué solucionamos?
+                
+                    Puedes encontrar todo relacionado con audio y sonido en un solo lugar y con los estanderes de calidad mas elevados del mercado.
+                </p>
             </section>
 
             <section class="party1">
@@ -91,18 +114,18 @@
             <a href="../index.html"><img src="../img/alpha.png" alt="logo alpha"></a>
         </div>
         <div> <!--Enlaces footer-->
-            <ul> 
+            <ul class="footerUL">
                 <li>
-                    <p>Lorem ipsum dolor sit.</p>
+                    <a href="./productos.html">Productos</a>
                 </li>
                 <li>
-                    <p>In ea quia quae.</p>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
                 <li>
-                    <p>Voluptates consectetur iusto molestias.</p>
+                    <a href="./servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <p>Provident amet nobis minus.</p>
+                    <a href="./acercade.html">Nosotros</a>
                 </li>
             </ul>
         </div>
