--- a/pages/productos.html
+++ b/pages/productos.html
@@ -329,18 +329,18 @@
             <a href="../index.html"><img src="../img/alpha.png" alt="logo alpha"></a>
         </div>
         <div> <!--Enlaces footer-->
-            <ul> 
+            <ul class="footerUL">
                 <li>
-                    <p>Lorem ipsum dolor sit.</p>
+                    <a href="./productos.html">Productos</a>
                 </li>
                 <li>
-                    <p>In ea quia quae.</p>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
                 <li>
-                    <p>Voluptates consectetur iusto molestias.</p>
+                    <a href="./servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <p>Provident amet nobis minus.</p>
+                    <a href="./acercade.html">Nosotros</a>
                 </li>
             </ul>
         </div>
