--- a/index.html
+++ b/index.html
@@ -204,19 +204,19 @@
             <a href="./index.html"><img src="./img/alpha.png" alt="Logo alpha"></a>
         </div>
         <div>
-            <ul>
+            <ul class="footerUL">
                 <!--Enlaces footer-->
                 <li>
-                    <p>Lorem ipsum dolor sit.</p>
+                    <a href="./pages/productos.html">Productos</a>
                 </li>
                 <li>
-                    <p>In ea quia quae.</p>
+                    <a href="./pages/contacto.html">Contacto</a>
                 </li>
                 <li>
-                    <p>Voluptates consectetur iusto molestias.</p>
+                    <a href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <p>Provident amet nobis minus.</p>
+                    <a href="./pages/acercade.html">Nosotros</a>
                 </li>
             </ul>
         </div>
