--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <a href="https://web.whatsapp.com/" target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp"></a>
         </div>
         <div class="botonFixed">
-            <a href=""><img src="./img/soporte.png" alt="whatsapp"></a>
+            <a href=""><img src="./img/soporte.png" alt="soporte"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
